--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 	
 	<!-- Bootstrap core CSS -->
 
-	<link href="../assets/css/bootstrap.min.css" rel="stylesheet">
+	<link href="./assets/css/bootstrap.min.css" rel="stylesheet">
 	
 	<!-- Font Awesome Icons -->
-	<link href="../assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+	<link href="./assets/css/font-awesome/css/font-awesome.min.css" rel="stylesheet">
 	
 	<!-- Custom CSS -->
-	<link href="../assets/css/custom.css" rel="stylesheet">
+	<link href="./assets/css/custom.css" rel="stylesheet">
 	
 	<!-- Google Fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Raleway:400,700' rel='stylesheet' type='text/css'>
@@ -52,7 +52,7 @@
 							<span class="icon-bar"></span>
 							<span class="icon-bar"></span>
 						</button>
-						<a class="navbar-brand" href="/"><img src="../assets/img/logo.png" alt="Bootstrap to Wordpress"></a>
+						<a class="navbar-brand" href="/"><img src="assets/img/logo.png" alt="Bootstrap to Wordpress"></a>
 					</div>
 					<div class="navbar-collapse collapse">
 						<ul class="nav navbar-nav navbar-right">
@@ -204,11 +204,11 @@
 			  src="https://code.jquery.com/jquery-3.3.1.min.js"
 			  integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
 			  crossorigin="anonymous"></script>
-    <script src="../assets/js/jquery-3.3.1.min.js"></script>
+    <script src="./assets/js/jquery-3.3.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"></script>
-    <script src="../assets/js/bootstrap.min.js"></script>
+    <script src="./assets/js/bootstrap.min.js"></script>
     
-    <script src="../assets/js/main.js"></script>
+    <script src="./assets/js/main.js"></script>
     
     <script type="text/javascript" src="//use.typekit.net/gla7wnd.js"></script>
 	<script type="text/javascript">try{Typekit.load();}catch(e){}</script>
