update image file header

--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
  	<div class="container clearfix">
  		<div class="row">
  			<div class="col-sm-5">
- 				<img src="../assets/img/logo-badge.png" alt="Bootstrap to Wordpress" class="logo">
+ 				<img src="assets/img/logo-badge.png" alt="Bootstrap to Wordpress" class="logo">
  				
  			</div><!--col -->
  			<div class="col-sm-7 hero-text">
