--- a/index.html
+++ b/index.html
@@ -170,20 +170,47 @@ Depending on the type of company you work for, if you understand how to code, an
 <h3>People Looking for a New Career</h3>
 <p>Are you out of work? Looking for a more rewarding job? Desire a career that can allow you to work almost anywhere in the world? Becoming a Web Developer might be the answer for you.</p>
 <p><strong>Web developers are paid well, anywhere from $33,000 to more than $105,000 per year.</strong> They get to work at amazing companies that are changing the world, or they enjoy the ability to start their own companies, become location-independent and work from home, from coffee shops, in an airplane, on the beach, or wherever they want!</p>
-—
-
-
-
      	</div><!--col-->
      </div><!--row--->
    </div><!--container-->
 </section><!--who benefits-->
 
- 				
- 		</section>
  			<!-- COURSE FEATURES
  				=============================================== -->
- 		<section>
+ 		<section id="course-features">
+ 			<div class="container">
+ 				<div class="section-header">
+ 					<img src="assets/img/icon-rocket.png" alt="Rocket">
+ 					<h2>Course Features</h2>
+ 				   </div><!--section header-->
+ 				 <div class="row">
+ 					<div class="col-sm-2">
+ 						<i class="ci ci-computer"></i>
+ 						<h4>Lifetime access to 80+ Lectures</h4>
+ 					</div><!-- end col-->
+ 					<div class="col-sm-2">
+ 						<i class="ci ci-watch"></i>
+ 						<h4>10+ hours of video content</h4>
+ 					</div><!-- end col-->
+ 					<div class="col-sm-2">
+ 						<i class="ci ci-calendar"></i>
+ 						<h4>130 day money back guarantee</h4>
+ 					</div><!-- end col-->
+ 					<div class="col-sm-2">
+ 						<i class="ci ci-community"></i>
+ 						<h4>Access to a community of like-minded students</h4>
+ 					</div><!-- end col-->
+ 					<div class="col-sm-2">
+ 						<i class="ci ci-instructor"></i>
+ 						<h4>Direct access to the instructor</h4>
+ 					</div><!-- end col-->
+ 					<div class="col-sm-2">
+ 						<i class="ci ci-device"></i>
+ 						<h4>Accessible content on your mobile devices</h4>
+ 					</div><!-- end col-->
+ 				</div><!--row--->
+ 			</div><!--Container--->
+ 		</section><!---course features-->
  					
  		</section>
  			<!-- PROJECT FEATURES 
