final project features commit

--- a/index.html
+++ b/index.html
@@ -211,11 +211,33 @@ Depending on the type of company you work for, if you understand how to code, an
  				</div><!--row--->
  			</div><!--Container--->
  		</section><!---course features-->
- 					
  		</section>
  			<!-- PROJECT FEATURES 
  					========================================== -->
- 		<section>
+ 		<section id="project-features">
+ 			<div class="container">
+ 				<h2>Final Project Features</h2>
+ 				<p class="lead">Throughout this entire course, you work towards building an incredibly beautiful website. Want to see the website<strong> you</strong> are going to build? <em>You're looking at it!</em> The website you're using right now is the website you will have built entirely by yourself, by the end of this course.</p>
+ 				<div class="row">
+ 					<div class="col-sm-4">
+ 						<img src="assets/img/icon-design.png" alt="Design">
+ 						<h3>Sexy &amp; Modern Design</h3>
+ 						<p>You get to work with a modern and professional quality design &amp; layout</p>
+ 					</div><!--end col-->
+ 					<div class="col-sm-4">
+ 						<img src="assets/img/icon-code.png" alt="Code">
+ 						<h3>Quality HTML5 &amp; CSS3</h3>
+ 						<p>Youll learn how to handcraft a stunning website with valid, semantic and beautiful HTML5 &amp; CSS#</p>
+ 					</div><!--end col-->
+ 					<div class="col-sm-4">
+ 						<img src="assets/img/icon-design.png" alt="Design">
+ 						<h3>Easy to use CMS</h3>
+ 						<p>Allow your clients to easily update their websites by converting your static websites to dynamic websites using wordpess</p>
+ 					</div><!--end col-->
+ 				</div><!--row-->
+        </div><!--container--->
+ 		</section><!--project-features-->
+
  						
  		</section>
  		<!--VIDEO FEATURETTE 
