added footer and media queries

--- a/index.html
+++ b/index.html
@@ -129,11 +129,11 @@
     		</div><!--section-header-->
     		<p class="lead">Whether you&rsquo; a freelance designer, entrepreneur, employee for a company, code hobbyist<br>or looking for a new career — this course gives you an immensely valuable skill that will enable you to either:</p>
     		<div class="row">
-    			<div class="col-sm-5">
+    			<div class="col-sm-6">
     				<h3>Make money on the side</h3>
     				<p>So you can save up for that Hawaiian vacation you’ve been wanting, help pay off your debt, your car, your mortgage, or simply just to have bonus cash laying around.</p>
     			</div><!-- col-->
-    			<div class="col-sm-5">
+    			<div class="col-sm-6">
     				<h3>Create a full time income</h3>
     				<p>WordPress developers have options. Many developers make a generous living off of creating custom WordPress themes and selling them on websites like ThemeForest. Freelance designers and developers can also take on WordPress projects and make an extra $1,000 - $5,000+ per month.</p>
     			</div><!--col--->
@@ -418,6 +418,32 @@ Depending on the type of company you work for, if you understand how to code, an
  		 				</div><!---row----->
  		 			</div><!-----contaner-->
  		 		</section><!-- signup-->
+
+ 		 		<!------FOOTER
+ 		 			================================================================-->
+ 		 			<footer>
+ 		 				<div class="container">
+ 		 					<div class="col-sm-3">
+ 		 						<p><a href="/"><img src="assets/img/logo.png" alt="Bootstrap to Wordpress"></a></p>
+ 		 					</div><!----end col--->
+ 		 					<div class="col-sm-6">
+ 		 						<nav>
+ 		 							<ul class="list-unstyled list-inline">
+ 		 								<li><a href="">Home</a></li>
+ 		 								<li><a href="">Blog</a></li>
+ 		 								<li><a href="">Resources</a></li>
+ 		 								<li><a href="">Contact</a></li>
+ 		 								<li class="signup-link"><a href="">Sign up now</a></li>
+ 		 							</ul>
+ 		 						</nav>
+ 		 					</div><!--- end col----->
+ 		 					<div class="col-sm-3">
+ 		 						<p class="pull-right">&copy; 2014 Brad Hussey</p>
+ 		 					</div><!----end col------->
+ 		 				</div><!------container----->
+ 		 				
+ 		 			</footer>
+
 
 
  
